Updated logic to make sure mmr changes only when we can ensure a player is not being updated for a duplicate match, had issues in past looking at logs, this will resolve :)

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "perf_hooks": "^0.0.1",
     "pino": "^8.6.0",
     "pm2": "^5.2.0",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
