--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "realm_main_site_and_testing_domains",
-  "version": "v0.8",
+  "version": "v0.85",
   "description": "See Name",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
     "bluebird": "^3.7.2",
     "connect-flash": "^0.1.1",
     "dayjs": "^1.11.3",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-google-analytics": "^1.0.2",
@@ -25,16 +26,18 @@
     "md5": "^2.3.0",
     "memory-cache": "^0.2.0",
     "moment": "^2.29.3",
-    "mysql2": "^2.3.3",
+    "mysql2": "^3.1.2",
     "net": "^1.0.2",
     "node-fetch": "^3.2.9",
     "node-steam-openid": "^1.0.1",
+    "openskill": "^2.1.0",
     "passport": "^0.6.0",
     "passport-steam": "^1.0.17",
     "perf_hooks": "^0.0.1",
     "pino": "^8.6.0",
     "pm2": "^5.2.0",
     "request-ip": "^3.3.0",
+    "split2": "^4.1.0",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   }
